# leave-tracker

./: docker-compose.yml  manage.py  pyproject.toml  requirements.txt
database/: models.py
database/management/commands/: create_permissions.py
database/migrations/: 0001_initial.py  0002_leave_description.py
leavetracker/: asgi.py  settings.py  urls.py  wsgi.py
tracker/: actions.py  admin.py  emails.py
