[tool.poetry]
name = "dayoff-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<4"
Django = "^5.2.3"
django-environ = "^0.12.0"
psycopg2-binary = "^2.9.10"
environ = "^1.0"
django-currentuser = "^0.9.0"
django-admin-interface = "^0.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
