[tool.poetry]
name = "dayoff-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<4"
Django = "^5.2.3"
django-environ = "^0.12.0"
psycopg2-binary = "^2.9.10"
environ = "^1.0"
django-currentuser = "^0.9.0"
django-admin-interface = "^0.30.1"
gunicorn = "^23.0.0"
dj-database-url = "^3.0.0"
django-unfold = "^0.61.0"
django-anymail = {extras = ["mailgun"], version = "^13.1"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
